# t4code

.github/workflows/: ci.yml  issue-labels.yml  pr-size.yml  pr-vouch.yml  release.yml
apps/desktop-tauri/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-tauri/scripts/: build.mjs  dev.mjs  prepare-node-runtime.mjs  server-launcher.mjs  stage-server-runtime.mjs
apps/desktop-tauri/src/: desktopBridge.ts  dragRegionAdapter.ts  globals.d.ts  main.ts  styles.css
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: commands.rs  main.rs  sidecar.rs
apps/server/integration/: TestProviderAdapter.integration.ts
apps/server/src/: keybindings.ts  server.test.ts  server.ts  serverSettings.ts  workspaceEntries.test.ts  workspaceEntries.ts  workspaceFiles.test.ts  workspaceFiles.ts  ws.ts  wsServer.test.ts  wsServer.ts
apps/server/src/provider/: githubCopilotSdk.ts  providerSnapshot.ts
apps/web/: package.json
apps/web/src/: composer-editor-mentions.test.ts  composer-editor-mentions.ts  composer-logic.ts  composerDraftStore.ts  index.css  keybindings.test.ts  modelSelection.ts  nativeApi.ts  session-logic.test.ts  session-logic.ts  store.ts  workspaceWorkbenchStore.test.ts  workspaceWorkbenchStore.ts  wsNativeApi.test.ts  wsNativeApi.ts  wsRpcClient.ts
apps/web/src/components/: ChatView.browser.tsx  ChatView.tsx  ComposerPromptEditor.tsx  GitActionsControl.tsx  KeybindingsToast.browser.tsx  Sidebar.tsx
apps/web/src/rpc/: client.ts  (+3 more)
(+70 files in other folders)
